Terminamos la función logInOctafx para iniciar sesión en Octafx y la función logInGmail que inicia sesión en Gmail.

--- a/TestNoteBooks/startWebPages.ipynb
+++ b/TestNoteBooks/startWebPages.ipynb
@@ -2,24 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "startPage_Path   = os.environ['tools_Path']\n",
     "URL_ScrapeMaster = os.environ['URL_ScrapeMaster']\n",
-    "octafx_User      = os.environ['octafx_User']\n",
-    "octafx_Password  = os.environ['octafx_Password']\n",
+    "user_octafx      = os.environ['user_octafx']\n",
+    "password_octafx  = os.environ['password_octafx']\n",
+    "user_Gmail       = os.environ['user_Gmail']\n",
+    "password_Gmail   = os.environ['password_Gmail']\n",
+    "\n",
     "\n",
     "import sys\n",
-    "\n",
-    "sys.path.append(startPage_Path)"
+    "sys.path.append(startPage_Path)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter to gmail successfully\n",
+      "The mail code is  6401\n"
+     ]
+    }
+   ],
    "source": [
-    "from tools.logInOctafx import logInOctafx\n",
-    "logInOctafx(driver, octafx_User, octafx_Password)"
+    "from tools.logInFunctions import logInOctafx\n",
+    "logInOctafx(driver, user_octafx, password_octafx)"
    ]
   },
   {
