--- a/TestNoteBooks/startWebPages.ipynb
+++ b/TestNoteBooks/startWebPages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,15 +14,13 @@
     "user_Gmail       = os.environ['user_Gmail']\n",
     "password_Gmail   = os.environ['password_Gmail']\n",
     "\n",
-    "\n",
     "import sys\n",
-    "sys.path.append(startPage_Path)\n",
-    "\n"
+    "sys.path.append(startPage_Path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +38,7 @@
      "output_type": "stream",
      "text": [
       "Enter to gmail successfully\n",
-      "The mail code is  6401\n"
+      "The mail code is  6946\n"
      ]
     }
    ],
