We added the prepareWebPageOctafx function, which navigates us in the browser to where the value of BTCUSD is located, and the getDataOctafx function, which retrieves the value of BTCUSD periodically and returns it as a vector with the time.

--- a/TestNoteBooks/startWebPages.ipynb
+++ b/TestNoteBooks/startWebPages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -38,13 +38,63 @@
      "output_type": "stream",
      "text": [
       "Enter to gmail successfully\n",
-      "The mail code is  6946\n"
+      "The mail code is  1844\n"
      ]
     }
    ],
    "source": [
     "from tools.logInFunctions import logInOctafx\n",
     "logInOctafx(driver, user_octafx, password_octafx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools.getData import prepareWebPageOctafx\n",
+    "from tools.getData import getDataOCtafx\n",
+    "\n",
+    "prepareWebPageOctafx(driver)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_serie = getDataOCtafx(driver = driver, time_to_get = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1.06432, datetime.datetime(2024, 4, 18, 17, 59, 52, 704507)),\n",
+       " (1.06431, datetime.datetime(2024, 4, 18, 17, 59, 53, 709783)),\n",
+       " (1.06429, datetime.datetime(2024, 4, 18, 17, 59, 54, 715698)),\n",
+       " (1.0643, datetime.datetime(2024, 4, 18, 17, 59, 55, 720972)),\n",
+       " (1.0643, datetime.datetime(2024, 4, 18, 17, 59, 56, 726257)),\n",
+       " (1.0643, datetime.datetime(2024, 4, 18, 17, 59, 57, 736918)),\n",
+       " (1.0643, datetime.datetime(2024, 4, 18, 17, 59, 58, 741586)),\n",
+       " (1.0643, datetime.datetime(2024, 4, 18, 17, 59, 59, 747868)),\n",
+       " (1.06431, datetime.datetime(2024, 4, 18, 18, 0, 0, 753126)),\n",
+       " (1.06431, datetime.datetime(2024, 4, 18, 18, 0, 1, 758696))]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_serie"
    ]
   },
   {
