The function saveDataOCtafx_in_CSV was added, which instead of returning a time series with BTCUSD values, saves the values every time_between_gets a certain sizeTimeSerie number of times. Also, saveTimeSerieCSV was added, which receives a list of tuples and saves them in a CSV.

--- a/TestNoteBooks/startWebPages.ipynb
+++ b/TestNoteBooks/startWebPages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
      "output_type": "stream",
      "text": [
       "Enter to gmail successfully\n",
-      "The mail code is  1844\n"
+      "The mail code is  7860\n"
      ]
     }
    ],
@@ -49,60 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tools.getData import prepareWebPageOctafx\n",
-    "from tools.getData import getDataOCtafx\n",
-    "\n",
     "prepareWebPageOctafx(driver)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_serie = getDataOCtafx(driver = driver, time_to_get = 5)"
+    "from tools.getData import saveDataOCtafx_in_CSV\n",
+    "saveDataOCtafx_in_CSV(driver = driver, time_between_gets = 3, sizeTimeSerie = 3600)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1.06432, datetime.datetime(2024, 4, 18, 17, 59, 52, 704507)),\n",
-       " (1.06431, datetime.datetime(2024, 4, 18, 17, 59, 53, 709783)),\n",
-       " (1.06429, datetime.datetime(2024, 4, 18, 17, 59, 54, 715698)),\n",
-       " (1.0643, datetime.datetime(2024, 4, 18, 17, 59, 55, 720972)),\n",
-       " (1.0643, datetime.datetime(2024, 4, 18, 17, 59, 56, 726257)),\n",
-       " (1.0643, datetime.datetime(2024, 4, 18, 17, 59, 57, 736918)),\n",
-       " (1.0643, datetime.datetime(2024, 4, 18, 17, 59, 58, 741586)),\n",
-       " (1.0643, datetime.datetime(2024, 4, 18, 17, 59, 59, 747868)),\n",
-       " (1.06431, datetime.datetime(2024, 4, 18, 18, 0, 0, 753126)),\n",
-       " (1.06431, datetime.datetime(2024, 4, 18, 18, 0, 1, 758696))]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "time_serie"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
